--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <h2 class="advantages_title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-itam">
+              <div class="advantages_svg_container">
+                <svg class="advantages_svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title_itam">Strategy</h3>
               <p class="advantages_text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="advantages-itam">
+              <div class="advantages_svg_container">
+                <svg class="advantages_svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title_itam">Punctuality</h3>
               <p class="advantages_text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="advantages-itam">
+              <div class="advantages_svg_container">
+                <svg class="advantages_svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title_itam">Diligence</h3>
               <p class="advantages_text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="advantages-itam">
+              <div class="advantages_svg_container">
+                <svg class="advantages_svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title_itam">Technologies</h3>
               <p class="advantages_text">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,6 +133,36 @@
               <div class="container_our_teams_item">
                 <h3 class="our_teams_title_item">Mark Guerrero</h3>
                 <p class="our_teams_text">Product Designer</p>
+                <ul class="our_teams_soc_list">
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our_teams_itam">
@@ -125,6 +175,36 @@
               <div class="container_our_teams_item">
                 <h3 class="our_teams_title_item">Tom Ford</h3>
                 <p class="our_teams_text">Frontend Developer</p>
+                <ul class="our_teams_soc_list">
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our_teams_itam">
@@ -137,6 +217,36 @@
               <div class="container_our_teams_item">
                 <h3 class="our_teams_title_item">Camila Garcia</h3>
                 <p class="our_teams_text">Marketing</p>
+                <ul class="our_teams_soc_list">
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our_teams_itam">
@@ -149,6 +259,36 @@
               <div class="container_our_teams_item">
                 <h3 class="our_teams_title_item">Daniel Wilson</h3>
                 <p class="our_teams_text">UI Designer</p>
+                <ul class="our_teams_soc_list">
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our_teams_soc_item">
+                    <a class="our_teams_soc_link" href="">
+                      <svg class="our_teams_soc_svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
