--- a/index.html
+++ b/index.html
@@ -300,72 +300,114 @@
           <h2 class="our_portfolio_title">Our Portfolio</h2>
           <ul class="our_portfolio_list">
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Banking App</h3>
                 <p class="our_portfolio_text">App</p>
               </div>
             </li>
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Cashless Payment</h3>
                 <p class="our_portfolio_text">Marketing</p>
               </div>
             </li>
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Meditation App</h3>
                 <p class="our_portfolio_text">App</p>
               </div>
             </li>
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Taxi Service</h3>
                 <p class="our_portfolio_text">Marketing</p>
               </div>
             </li>
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Screen Illustrations</h3>
                 <p class="our_portfolio_text">Design</p>
               </div>
             </li>
             <li class="our_portfolio_itam">
-              <img
-                src="./images/portfolio_6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="our_portfolio_itam_img">
+                <img
+                  src="./images/portfolio_6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="our_portfolio_itam_img_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container_our_portfolio_itam">
                 <h3 class="our_portfolio_title_itam">Online Courses</h3>
                 <p class="our_portfolio_text">Marketing</p>
