--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             >Web<span class="logo-part">Studio</span></a
           >
           <ul class="heder_nav_list">
-            <li class="heder_nav_itam studio_nav">
-              <a class="heder_nav_link" href="./index.html">Studio</a>
+            <li class="heder_nav_itam">
+              <a class="heder_nav_link studio_nav" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="heder_nav_itam">
               <a class="heder_nav_link" href="">Portfolio</a>
