--- a/index.html
+++ b/index.html
@@ -421,13 +421,48 @@
     </main>
     <footer class="footer">
       <div class="container container_footer">
-        <a class="footer_logotyp" href="./index.html"
-          >Web<span class="footer_logo-part">Studio</span></a
-        >
-        <p class="footer_text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container_footer_logo">
+          <a class="footer_logotyp" href="./index.html"
+            >Web<span class="footer_logo-part">Studio</span></a
+          >
+          <p class="footer_text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container_footer_soc">
+          <p class="footer_soc_text">Social media</p>
+          <ul class="footer_soc_list">
+            <li class="footer_soc_item">
+              <a class="footer_soc_link" href="">
+                <svg class="footer_soc_svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_soc_item">
+              <a class="footer_soc_link" href="">
+                <svg class="footer_soc_svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_soc_item">
+              <a class="footer_soc_link" href="">
+                <svg class="footer_soc_svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_soc_item">
+              <a class="footer_soc_link" href="">
+                <svg class="footer_soc_svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
