--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >Web<span class="logo-part">Studio</span></a
           >
           <ul class="heder_nav_list">
-            <li class="heder_nav_itam">
+            <li class="heder_nav_itam heder_nav_itam_studio">
               <a class="heder_nav_link studio_nav" href="./index.html"
                 >Studio</a
               >
